@startuml TinhHoanCocKhauTru_ClassDiagram
title Class Diagram - UC24: Tính khoản hoàn cọc và khấu trừ

skinparam {
    ClassBackgroundColor White
    ArrowColor #2D3E50
    ClassBorderColor #2D3E50
    DefaultFontName "Arial"
    DefaultFontSize 16
    ClassBorderThickness 2
    StereotypeFontColor #2D3E50
    Padding 5
}

class "ScreenRefundCalculation" as CalculateRefundScreen <<boundary>> {
  - lblContractInfo: Label
  - lblRefundInfo: Label
  - txtDamage: Textbox
  - txtExtraDeductions: Textbox
  - btnCalculate: Button
  - btnSave: Button
  - btnBack: Button
  + show(requestId: string): void
  + btnCalculateClick(): void
  + btnSaveClick(): void
}

class "CheckoutRequest" as CheckoutRequest <<control>> {
  - requestId: string
  - userEmail: string
  - rentalFormId: string
  - expectedDate: string
  - status: CheckoutStatus
  - createdAt: string
  + <<static>> getById(requestId: string): CheckoutRequest 
}

class "CheckoutRequestDB" as CheckoutRequestDB <<entity>> {
  + <<static>> getById(id: string): CheckoutRequest
}

class "RefundCalculation" as RefundCalculation <<control>> {
  - calculationId: string
  - requestId: string
  - rentalFormId: string
  - depositAmount: number
  - damageFee: number
  - extraFee: number
  - finalRefundAmount: number
  - notes: string
  - createdAt: string
  + <<static>> create(data: RefundCalculation): RefundCalculation
  + <<static>> update(calculationId: string, data: RefundCalculation): RefundCalculation 
}

class "RefundCalculationDB" as RefundCalculationDB <<entity>> {
  + <<static>> create(data: RefundCalculation): RefundCalculation
  + <<static>> update(calculationId: string, data: RefundCalculation): RefundCalculation
}

class "Rental" as Rental <<control>> {
  - rentalFormId: string
  - userEmail: string
  - type: string
  - totalAmount: number
  + <<static>> getRentalFormById(rentalFormId: string): Rental
}

class "RentalDB" as RentalDB <<entity>> {
  + <<static>> getRentalFormById(rentalFormId: string): Rental
}

class "Contract" as Contract <<control>> {
  - contractId: string
  - rentalFormId: string
  - startDate: string
  - stayDuration: number
  - status: ContractStatus
  + <<static>> getByRentalFormId(rentalFormId: string): Contract 
}

class "ContractDB" as ContractDB <<entity>> {
  + <<static>> getByRentalFormId(rentalFormId: string): Contract 
}

CalculateRefundScreen --> RefundCalculation
RefundCalculation --> RefundCalculationDB
CalculateRefundScreen --> Rental
Rental --> RentalDB
CalculateRefundScreen --> Contract
Contract --> ContractDB
CalculateRefundScreen --> CheckoutRequest
CheckoutRequest --> CheckoutRequestDB

@enduml
